--- a/choose.html
+++ b/choose.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<div id="wraper" class="view-choose">
+		<a href="index.html" class="go-back"><返回</a>
 		<div class="person-box" id="person-box">
 			<div>
 				<img src="img/random.jpg" alt="">
@@ -20,8 +21,6 @@
 		<div class="selected-box">
 			<label>已选</label>
 			<div class="selected-result">
-				
-				
 			</div>
 		</div>
 
