--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</div>
 
 			<div class="item">
-				<a class="btn btn-l">
+				<a class="btn btn-l" href="lottery.html">
 					<span class="icon icon-friends">
 						幸运大抽奖
 					</span>
