游戏抽人逻辑

--- a/choose.html
+++ b/choose.html
@@ -37,6 +37,6 @@
 	<!-- 参与人员信息 -->
 	<script src="data.js"></script>
 	<!-- 抽奖逻辑 -->
-	<script src="lottery.js"></script>
+	<script src="choose.js"></script>
 </body>
 </html>
