--- a/choose.html
+++ b/choose.html
@@ -36,7 +36,9 @@
 	<script src="lib/store.min.js"></script>
 	<!-- 参与人员信息 -->
 	<script src="data.js"></script>
-	<!-- 抽奖逻辑 -->
+	<!-- 公共 -->
+	<script src="common.js"></script>
+	<!-- 抽人逻辑 -->
 	<script src="choose.js"></script>
 </body>
 </html>
