--- a/lottery.html
+++ b/lottery.html
@@ -20,26 +20,26 @@
 
 
 		<ul class="prize-box">
-			<li class="selected-box">
+			<li class="selected-box" id="specialPrize">
 				<label>特等奖</label>
 				<div class="selected-result">
 					<span class="item">衡荣2</span>
 				</div>
 
-				<a class="btn">开始</a>
+				<a class="btn" data-which="specialPrize" id="specialPrizeBtn">开始</a>
 			</li>
 
-			<li class="selected-box">
+			<li class="selected-box" id="firstPrize">
 				<label>一等奖</label>
 				<div class="selected-result">
 					<span class="item">衡荣2</span>
 					<span class="item">衡荣2</span>
 				</div>
 
-				<a class="btn">开始</a>
+				<a class="btn" data-which="firstPrize" id="firstPrizeBtn">开始</a>
 			</li>
 
-			<li class="selected-box">
+			<li class="selected-box" id="secondPrize">
 				<label>二等奖</label>
 				<div class="selected-result">
 					<span class="item">衡荣2</span>
@@ -47,10 +47,10 @@
 					<span class="item">衡荣2</span>
 				</div>
 
-				<a class="btn">开始</a>
+				<a class="btn" data-which="secondPrize" id="secondPrizeBtn">开始</a>
 			</li>
 
-			<li class="selected-box">
+			<li class="selected-box" id="thirdPrize">
 				<label>三等奖</label>
 				<div class="selected-result">
 					<span class="item">衡荣2</span>
@@ -60,10 +60,11 @@
 					<span class="item">衡荣2</span>
 				</div>
 
-				<a class="btn">开始</a>
+				<a class="btn" data-which="thirdPrize" id="thirdPrizeBtn">开始</a>
 			</li>
 		</ul>
 	</div>
+	<script src="common.js"></script>
 	<script src="lottery.js"></script>
 </body>
 </html>
