--- a/lottery.html
+++ b/lottery.html
@@ -23,7 +23,6 @@
 			<li class="selected-box" id="specialPrize">
 				<label>特等奖</label>
 				<div class="selected-result">
-					<span class="item">衡荣2</span>
 				</div>
 
 				<a class="btn" data-which="specialPrize" id="specialPrizeBtn">开始</a>
@@ -32,8 +31,6 @@
 			<li class="selected-box" id="firstPrize">
 				<label>一等奖</label>
 				<div class="selected-result">
-					<span class="item">衡荣2</span>
-					<span class="item">衡荣2</span>
 				</div>
 
 				<a class="btn" data-which="firstPrize" id="firstPrizeBtn">开始</a>
@@ -42,9 +39,6 @@
 			<li class="selected-box" id="secondPrize">
 				<label>二等奖</label>
 				<div class="selected-result">
-					<span class="item">衡荣2</span>
-					<span class="item">衡荣2</span>
-					<span class="item">衡荣2</span>
 				</div>
 
 				<a class="btn" data-which="secondPrize" id="secondPrizeBtn">开始</a>
@@ -53,17 +47,13 @@
 			<li class="selected-box" id="thirdPrize">
 				<label>三等奖</label>
 				<div class="selected-result">
-					<span class="item">衡荣2</span>
-					<span class="item">衡荣2</span>
-					<span class="item">衡荣2</span>
-					<span class="item">衡荣2</span>
-					<span class="item">衡荣2</span>
 				</div>
 
 				<a class="btn" data-which="thirdPrize" id="thirdPrizeBtn">开始</a>
 			</li>
 		</ul>
 	</div>
+	<script src="data.js"></script>
 	<script src="common.js"></script>
 	<script src="lottery.js"></script>
 </body>
