--- a/lottery.html
+++ b/lottery.html
@@ -53,7 +53,7 @@
 			</li>
 		</ul>
 	</div>
-	<script src="data.js"></script>
+	<script src="data-lottery.js"></script>
 	<script src="common.js"></script>
 	<script src="lottery.js"></script>
 </body>
