--- a/choose.html
+++ b/choose.html
@@ -13,7 +13,7 @@
 			<div>
 				<img src="img/random.jpg" alt="">
 				<h1 class="person-name">
-					风武侠
+					
 				</h1>
 			</div>
 		</div>
@@ -35,7 +35,7 @@
 	<!-- 本地储存 -->
 	<script src="lib/store.min.js"></script>
 	<!-- 参与人员信息 -->
-	<script src="data.js"></script>
+	<script src="data-choose.js"></script>
 	<!-- 公共 -->
 	<script src="common.js"></script>
 	<!-- 抽人逻辑 -->
